applications/rabbitmq-broker/base/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-broker
  namespace: quizmeup
  labels:
    app: rabbitmq-broker
spec:
  serviceName: rabbitmq-broker-headless
  replicas: 3
  selector:
    matchLabels:
      app: rabbitmq-broker
  template:
    metadata:
      labels:
        app: rabbitmq-broker
    spec:
      serviceAccountName: rabbitmq-broker
      terminationGracePeriodSeconds: 10
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
            - containerPort: 4369
              name: epmd
            - containerPort: 25672
              name: cluster-rpc
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - status
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-broker-config-map
            items:
              - key: rabbitmq.conf
                path: rabbitmq.conf
              - key: enabled_plugins
                path: enabled_plugins
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
