applications/rabbitmq-broker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-broker-service
  namespace: quizmeup
  labels:
    app: rabbitmq-broker
spec:
  type: ClusterIP
  selector:
    app: rabbitmq-broker
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
