applications/rabbitmq-broker/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-broker-ingress
  namespace: quizmeup
